--- a/app/config/config.ini
+++ b/app/config/config.ini
@@ -9,5 +9,13 @@ password=
 [mail]
 
 [app]
-views = "app/views/"
-cache = "app/cache/"
+#Resources Path
+views_path = app/views/
+
+#Cache Sessions and Views
+cache_path = app/cache/
+cache_status = false
+
+#Loading Public resources 
+styles=public/assets/bootstrap/css
+jquery=public/assets/bootstrap/js
