Fix Session class and database !

--- a/app/config/config.ini
+++ b/app/config/config.ini
@@ -15,6 +15,7 @@ views_path = app/views/
 #Cache Sessions and Views
 cache_path = app/cache/
 cache_status = false
+session_path = app/cache/session
 
 #Loading Public resources 
 styles=public/assets/bootstrap/css
